--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
         "angularjs"
     ],
     "dependencies": {
-        "trix": "latest",
+        "trix": "1.3.1",
         "angular": ">=1.2.0"
     },
     "ignore": [
